--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   /* background-color: #f6f6f6 !important; */
   height: 100vh;
+  width: 100vw;
+
   font-family: "Helvetica" !important;
   background-color: #fafafa;
 }
@@ -91,4 +93,32 @@
   /* -moz-border-radius:75px;
   -webkit-border-radius: 75px; */
   /* width: 100px; */
+}
+
+@media screen and (max-width:800px) {
+  twisty-player {
+    /* width: 200px; */
+    height:150px;
+  }
+  #rightCol {
+    max-height: calc(100%);
+    min-width: 100%;
+  }
+}
+
+@media screen and (max-width:600px) {
+
+  #headerIconContainer {
+    display: none;
+  }
+
+  #headerTitleContainer {
+    justify-content: start;
+    padding-left: 8px;
+    width: 100%;
+  }
+
+  #headerTitle {
+    font-size: large;
+  }
 }
